derive/tests/snapshots/referenced_row_methods/Circle/create_circle.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**Create a row in the `circle` table.

# Foreign keys

Fails with `ReferenceIntegrityViolation` unless each column references a row:

- `entity_id`: a row of the `entity` table (`self`), or `0`
- `player_id`: a row of the `player` table (`self`), or `0`*/
    pub fn create_circle<'a>(
        &'a self,
        circle: CreateCircle,
    ) -> Result<Circle, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let entity_id = circle.entity_id.value();
        let player_id = circle.player_id.value();
        let circle = Circle { entity_id, player_id };
        let mut the_same_or_another_circle: Option<Circle> = None;
        if entity_id.ne(&0) {
            match self.get_entity_by_id(circle.get_entity_id()) {
                Ok(_) => {}
                Err(_) => {
                    return Err(
                        crate::spacetimedsl::error::SpacetimeDSLError::ReferenceIntegrityViolation(crate::spacetimedsl::error::ReferenceIntegrityViolationError::OnCreateOrUpdate {
                            table_name: "circle".into(),
                            create_or_update: crate::spacetimedsl::error::CreateOrUpdate::Create,
                            column_names_and_row_values: format!(
                                "{{ entity_id : {} }}", circle.get_entity_id().value()
                            )
                                .into(),
                        }),
                    );
                }
            };
        }
        if player_id.ne(&0) {
            match self.get_player_by_id(circle.get_player_id()) {
                Ok(_) => {}
                Err(_) => {
                    return Err(
                        crate::spacetimedsl::error::SpacetimeDSLError::ReferenceIntegrityViolation(crate::spacetimedsl::error::ReferenceIntegrityViolationError::OnCreateOrUpdate {
                            table_name: "circle".into(),
                            create_or_update: crate::spacetimedsl::error::CreateOrUpdate::Create,
                            column_names_and_row_values: format!(
                                "{{ player_id : {} }}", circle.get_player_id().value()
                            )
                                .into(),
                        }),
                    );
                }
            };
        }
        let unique_column_values = (circle.entity_id.clone(),);
        match self.db().circle().try_insert(circle) {
            Ok(entity) => Ok(entity),
            Err(error) => {
                match error {
                    ::spacetimedb::TryInsertError::UniqueConstraintViolation(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                            table_name: "circle".into(),
                            action: crate::spacetimedsl::error::Action::Create,
                            error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDB,
                            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                            column_names_and_row_values: format!(
                                "{{ entity_id : {} }}", unique_column_values.0
                            )
                                .into(),
                        })
                    }
                    ::spacetimedb::TryInsertError::AutoIncOverflow(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::AutoIncOverflow {
                            table_name: "circle".into(),
                        })
                    }
                }
            }
        }
    }
}
