derive/tests/snapshots/referenced_row_methods/Circle/get_all_circles.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `circle` table.
    pub fn get_all_circles<'a>(&'a self) -> impl Iterator<Item = Circle> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().circle().iter()
    }
}
