derive/tests/snapshots/referenced_row_methods/Circle/get_circle_by_entity_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Circle` from the `circle` table whose value matches the value from the unique single-column btree index on the `entity_id` column.*/
    pub fn get_circle_by_entity_id<'a>(
        &'a self,
        entity_id: impl Into<EntityId> + Clone,
    ) -> Result<Circle, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().circle().entity_id().find(entity_id.clone().into().value()) {
            Some(circle) => Ok(circle),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "circle".into(),
                    column_names_and_row_values: format!(
                        "{{ entity_id : {} }}", entity_id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Circle` from the `circle` table whose value matches the value from the unique single-column btree index on the `entity_id` column.*/
    pub fn get_circle_by_entity_id<'a>(
        &'a self,
        entity_id: impl Into<EntityId> + Clone,
    ) -> Result<Circle, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().circle().entity_id().find(entity_id.clone().into().value()) {
            Some(circle) => Ok(circle),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "circle".into(),
                    column_names_and_row_values: format!(
                        "{{ entity_id : {} }}", entity_id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
